<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectActivity"
    android:background="@color/CanEatbackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/caneaticon"
            android:contentDescription="Can Eat?">

        </ImageView>

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:background="@drawable/caneatmyinfobutton"
            android:clickable="true"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="351dp">

        </Button>


    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/option_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/save_button"
        android:text="@string/optionsave"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="560dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/roundlayout"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/option_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691">

        <LinearLayout
            android:id="@+id/diseaselayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/disease"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/disease"
                android:textColor="#00000B"
                android:textStyle="normal" />

            <Button
                android:id="@+id/disease_button"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/register_button"
                android:text="등록하기"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/veganlayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/vegan"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/vegan"
                android:textColor="#00000B"
                android:textStyle="normal" />

            <Button
                android:id="@+id/vegan_button"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/register_button"
                android:text="@string/register"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/allegric_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/allegric"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="알레르기"
                android:textColor="#00000B"
                android:textStyle="normal" />

            <Button
                android:id="@+id/allegric_button"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/register_button"
                android:text="@string/Register"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/religion_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/religion"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="종교"
                android:textColor="#00000B"
                android:textStyle="normal" />

            <Button
                android:id="@+id/religion_button"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/register_button"
                android:text="@string/Register"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ingredient_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ingredient"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="못먹는 성분"
                android:textColor="#00000B"
                android:textStyle="normal" />

            <Button
                android:id="@+id/ingredient_button"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/register_button"
                android:text="@string/Register"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>



